--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "typescript": "^3.9.3"
     },
     "dependencies": {
+        "@types/bcryptjs": "^2.4.2",
         "bcryptjs": "^2.4.3",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.16"
