--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/express": "^4.17.6",
+        "@types/express-validator": "^3.0.0",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mongoose": "^5.7.21",
         "@types/node": "^14.0.5",
@@ -29,6 +30,7 @@
         "bcryptjs": "^2.4.3",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-validator": "^6.5.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.16"
     }
