--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     },
     "dependencies": {
         "@types/bcryptjs": "^2.4.2",
+        "@types/multer": "^1.4.3",
         "bcryptjs": "^2.4.3",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.5.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.9.16"
+        "mongoose": "^5.9.16",
+        "multer": "^1.4.2"
     }
 }
