--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "author": "Johan Holguin y David Vélez",
     "license": "ISC",
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "@types/cors": "^2.8.6",
         "@types/express": "^4.17.6",
         "@types/express-validator": "^3.0.0",
+        "@types/fs-extra": "^9.0.1",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mongoose": "^5.7.21",
+        "@types/multer": "^1.4.3",
         "@types/node": "^14.0.5",
         "morgan": "^1.10.0",
         "node-modules": "^1.0.1",
@@ -26,14 +30,16 @@
         "typescript": "^3.9.3"
     },
     "dependencies": {
-        "@types/bcryptjs": "^2.4.2",
-        "@types/multer": "^1.4.3",
         "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.5.0",
+        "fs-extra": "^9.0.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.16",
-        "multer": "^1.4.2"
+        "multer": "^1.4.2",
+        "path-type": "^4.0.0",
+        "uuid": "^8.1.0"
     }
 }
