--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.6",
         "@types/express-validator": "^3.0.0",
+        "@types/file-type": "^10.9.1",
         "@types/fs-extra": "^9.0.1",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mongoose": "^5.7.21",
@@ -35,6 +36,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.5.0",
+        "file-type": "^14.6.2",
         "fs-extra": "^9.0.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.16",
