--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.6",
+        "@types/express-fileupload": "^1.1.3",
         "@types/express-validator": "^3.0.0",
         "@types/file-type": "^10.9.1",
         "@types/fs-extra": "^9.0.1",
@@ -35,6 +36,7 @@
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-fileupload": "^1.1.7-alpha.3",
         "express-validator": "^6.5.0",
         "file-type": "^14.6.2",
         "fs-extra": "^9.0.1",
