--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.6",
         "@types/express-fileupload": "^1.1.3",
+        "@types/express-session": "^1.17.0",
         "@types/express-validator": "^3.0.0",
         "@types/file-type": "^10.9.1",
         "@types/fs-extra": "^9.0.1",
@@ -37,10 +38,12 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-fileupload": "^1.1.7-alpha.3",
+        "express-session": "^1.17.1",
         "express-validator": "^6.5.0",
         "file-type": "^14.6.2",
         "fs-extra": "^9.0.1",
         "jsonwebtoken": "^8.5.1",
+        "jwt-redis": "^5.0.11",
         "mongoose": "^5.9.16",
         "multer": "^1.4.2",
         "path-type": "^4.0.0",
