--- a/package.json
+++ b/package.json
@@ -34,10 +34,14 @@
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
+        "connect-multiparty": "^2.2.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-fileupload": "^1.1.7-alpha.3",
+        "express-form-data": "^2.0.13",
+        "express-formidable": "^1.2.0",
         "express-session": "^1.17.1",
         "express-validator": "^6.5.0",
         "file-type": "^14.6.2",
@@ -46,6 +50,7 @@
         "jwt-redis": "^5.0.11",
         "mongoose": "^5.9.16",
         "multer": "^1.4.2",
+        "multiparty": "^4.2.1",
         "path-type": "^4.0.0",
         "uuid": "^8.1.0"
     }
