--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-mongo-sanitize": "^2.0.0",
         "express-validator": "^6.5.0",
         "file-type": "^14.6.2",
+        "helmet": "^3.23.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.16",
         "multer": "^1.4.2",
-        "path-type": "^4.0.0"
+        "path-type": "^4.0.0",
+        "xss-clean": "^0.1.1"
     }
 }
